# irssi-llmagent

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  Dockerfile  README.md  analyze_classifier.py  analyze_proactive.py  config.json.example  docker-compose.yml  pyproject.toml
benchmarks/: quest_e2e.py
docs/: discord-arch.md  discord.md  docker.md  slack-arch.md  slack.md
irssi_llmagent/: __init__.py  agent.py  anthropic.py  base_client.py  claude.py  context_reducer.py  deepseek.py  history.py  main.py  message_logging.py  model_router.py  openai.py  perplexity.py  proactive_debouncer.py  tools.py  varlink.py
irssi_llmagent/agentic_actor/: __init__.py  actor.py  tools.py
irssi_llmagent/chronicler/: __init__.py  chapters.py  chronicle.py  quests.py  subagent.py  tools.py
irssi_llmagent/providers/: __init__.py  anthropic.py  openai.py  perplexity.py
irssi_llmagent/rooms/: __init__.py
muaddib/: history.py  main.py  message_logging.py
muaddib/agentic_actor/: actor.py  artifact_viewer.html  tools.py
muaddib/chronicler/: quests.py
muaddib/providers/: __init__.py  anthropic.py  openai.py  perplexity.py
muaddib/rooms/: command.py  proactive.py
tests/: __init__.py  conftest.py  test_agent.py  test_context_reducer.py  test_history.py  test_main.py  test_proactive_debouncer.py  test_progress.py  test_rate_limiter.py  test_tools.py  test_varlink.py
tests/agentic_actor/: conftest.py  test_actor.py  test_progress.py  test_tools.py
tests/chronicler/: test_chapters.py  test_chronicle.py  test_quests.py  test_subagent.py  test_tools.py
tests/providers/: test_anthropic.py  test_openai.py  test_unsafe_fallback.py
tests/rooms/: test_command.py  test_proactive.py
(+13 files in other folders)
